# haskell-cookbook

./: .gitignore  README.md
chapter_1/hello/: hello.cabal  package.yaml
chapter_1/list/: list.cabal  package.yaml
chapter_1/quadratic/: CHANGELOG.md  package.yaml  quadratic.cabal
chapter_2/eratosthenes/: CHANGELOG.md  eratosthenes.cabal
chapter_2/fibonacci/: CHANGELOG.md  fibonacci.cabal
chapter_2/fibonacci-infinite/: CHANGELOG.md  fibonacci-infinite.cabal
chapter_2/folds/: CHANGELOG.md  folds.cabal
chapter_2/map-filter/: CHANGELOG.md  map-filter.cabal
chapter_2/merge-sort/: CHANGELOG.md  merge-sort.cabal
chapter_2/pseudo-quicksort/: CHANGELOG.md  README.md  preudo-quicksort.cabal
chapter_2/pseudo-quicksort/src/: Main.hs
chapter_2/reverse/: CHANGELOG.md  reverse.cabal
chapter_3/binary-tree-traverse/: CHANGELOG.md  binary-tree-traverse.cabal
chapter_3/data-type-with-function/: CHANGELOG.md  data-type-with-function.cabal
chapter_3/product-type/: CHANGELOG.md  product-type.cabal
chapter_3/sum-type/: CHANGELOG.md  sum-type.cabal
chapter_3/using-either/: CHANGELOG.md  using-either.cabal
chapter_3/using-maybe/: CHANGELOG.md  using-maybe.cabal
chapter_3/working-with-functors/: CHANGELOG.md  working-with-functors.cabal
chapter_3/working-with-monoid/: CHANGELOG.md  working-with-monoid.cabal
chapter_3/working-with-type-classes/: CHANGELOG.md  working-with-type-classes.cabal
chapter_4/binary-tree-applicative/: CHANGELOG.md  binary-tree-applicative.cabal
chapter_4/binary-tree-functor/: CHANGELOG.md  binary-tree-functor.cabal
(+36 files in other folders)
